--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@ function undisplayInfo(id){
   </span>
 
   <span align="left" style="display:inline-block; vertical-align: top;margin:30px;">
-  <label for="option" style="margin-right: -100px">Choose a display option:</label>
+  <label for="option" style="margin-right: -100px;margin-bottom: -5px">Choose a display option:</label>
   
   <span id="infoAvatar" class="undisplayed">
     Displays the translation using an avatar
   </span>
 
   <br>
-  <span style="margin-right: -25px; margin-bottom: -5px">
+  <span style="margin-right: -25px; margin-bottom: -5px;margin-top: -5px">
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
     <label for="avatar" style="margin-right: 5px">Avatar</label>
     <i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
