afspeelknop veranderen afhankelijk van display optie

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ $( function() {
 
     <!-- <script type="text/python" src="test.py"></script> -->
     <!-- <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button> -->
-    <button id="freestyle">Freestyle</button>
+    <button id="freestyle" class="undisplayed">Freestyle</button>
     <br>
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
