afspeelknop veranderen afhankelijk van display optie

--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@ $( function() {
 
     <br>
     <input type="button" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
+    <input type="button" id="freestyle" value="Freestyle" class="undisplayed">
    <!--  <input type="button" id="play" value="Translate" onclick='playURL("house.sigml");'/> -->
     <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
 
     <!-- <script type="text/python" src="test.py"></script> -->
     <!-- <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button> -->
-    <button id="freestyle" class="undisplayed">Freestyle</button>
     <br>
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
