tooltip using jquery

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ function undisplayInfo(id){
 
 // Displays titles of all HTML elements as a tooltip
 $( function() {
-    $(".fa fa-question-circle").tooltip({
+    $(document).tooltip({
       position: { my: "left+15 center", at: "right center" }
     });
 });
