--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@ function playText(stext) {
 
 // verandert de source van de embedded video
 function changeVideo(url) {
-  window.frames['videos'].location.replace(url);
+  // window.frames['videos'].location.replace(url);
   // document.getElementById('videos').src = "https://www.youtube-nocookie.com/embed/f7xMGTE7D5w";
-  document.getElementById('test').innerHTML = document.getElementById('videos').src;
+  // document.getElementById('test').innerHTML = document.getElementById('videos').src;
+  player.loadVideoByUrl(url);
 }
 
 function addStatus(evt) {
@@ -155,8 +156,6 @@ function toSiGML(text){
 }
 
 
-
-
 function changeFunc(myRadio) {
   if (myRadio.value == "avatar") {
     document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
@@ -234,6 +233,47 @@ $( function() {
     });
 });
 
+var tag = document.createElement('script');
+
+// Code for YT player
+tag.src = "https://www.youtube.com/iframe_api";
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+// 3. This function creates an <iframe> (and YouTube player)
+//    after the API code downloads.
+var player;
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player('player', {
+    height: '390',
+    width: '640',
+    videoId: 'M7lc1UVf-VE',
+    events: {
+      'onReady': onPlayerReady,
+      'onStateChange': onPlayerStateChange
+    }
+  });
+}
+
+// 4. The API will call this function when the video player is ready.
+function onPlayerReady(event) {
+  event.target.playVideo();
+}
+
+// 5. The API calls this function when the player's state changes.
+//    The function indicates that when playing a video (state=1),
+//    the player should play for six seconds and then stop.
+var done = false;
+function onPlayerStateChange(event) {
+  if (event.data == YT.PlayerState.PLAYING && !done) {
+    setTimeout(stopVideo, 6000);
+    done = true;
+  }
+}
+function stopVideo() {
+  player.stopVideo();
+}
+
 
 </script>
 
@@ -273,8 +313,8 @@ $( function() {
   <span id="avatar" class="CWASAAvatar av0" align="left" ></span>
   <!--================================================================-->
 
-  <span id="videos" class="undisplayed" align="left">
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+  <span id="player" class="undisplayed" align="left">
+    <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe> -->
   </span>
 
   <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
@@ -285,14 +325,14 @@ $( function() {
     <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
     <label for="avatar" style="margin-right: 5px">Avatar</label>
     <i class="fa fa-question-circle" title="Displays the translation of select sentences using an avatar"></i>
- 
-  
+
+
   <br>
   <!-- Defines the button and questioncircle displayed for the option "video" -->
     <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
     <label for="video" style="margin-right:5px">Video</label>
     <i class="fa fa-question-circle" title="Displays the translation using a video"></i>
-  
+
   <br>
   <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
   <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
