--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@ var tag = document.createElement('script');
   <span id="avatar" class="CWASAAvatar av0" align="left" ></span>
   <!--================================================================-->
 
-  <span id="player" class="undisplayed" align="left">
+  <div id="player" class="undisplayed" align="left">
     <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kfrivlDWyJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe> -->
-  </span>
+  </div>
   <script>
       // 2. This code loads the IFrame Player API code asynchronously.
       var tag = document.createElement('script');
