tooltip using jquery

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ function undisplayInfo(id){
 // Displays titles of all HTML elements as a tooltip
 $( function() {
     $(document).tooltip({
-      position: { my: "left+15 center", at: "right center" }
+      position: {at: "right center" }
     });
 });
 
