--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@ $( function() {
 <!-- Defines the page displayed when "Software" is selected from the tab options -->
 <div id="Software" class="tabcontent" align="center">
   <p>The avatar software used for displaying the translations has been provided by John Glauert.</p>
+  <p>This project was funded by</p><img src="images/ZonMWlogo.png" alt="ZonMW logo">
 </div>
 
 <!-- Clicks on the page set as default to make sure it is diplayed when the website is loaded -->
