--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ var jsonvideo = (function() {
 function toSiGML(text){
   // if avatar is checked, sigml is sent
   if (document.getElementById("avatarDisplay").checked) {
-    playText(json[text]);
+    // playText(json[text]);
+    alert(json[text]);
   }
   // if video is checked, source of embedded video changes
   else if (document.getElementById("videoDisplay").checked) {
