--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@ $( function() {
     <br>
 
     <input id="suggestions" class="txtaSiGMLText" style="margin-top:10px; margin-bottom:10px;">
-    <input type="button" value="Send" onclick='CWASA.stopSiGML();' style="display: inline-block;" />
+    <label for="suggestions">Suggestions box</label>
+    <input type="button" value="Send" onclick='CWASA.stopSiGML();' style="display: inline-block; width: 250px;" />
   </span>
 
   <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
