--- a/index.html
+++ b/index.html
@@ -249,14 +249,14 @@ $( function() {
 function addSuggestion(suggestion){
   // Requiring fs module in which 
   // writeFile function is defined. 
-  const fs = require('fs') 
+  const fs = require('fs');
     
   // Write data in 'Output.txt' . 
   fs.writeFile('suggestions.txt', suggestion, (err) => { 
         
       // In case of a error throw err. 
       if (err) throw err; 
-  }) 
+  });
 }
 
 </script>
