--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ function addSuggestion(suggestion){
     Adjust speed: <span class="CWASASpeed av0"></span>
     <br>
 
-    <label for="suggestions">Suggestions box</label>
+    <label for="suggestions">Suggestions box: </label>
     <input id="suggestions" class="txtaSiGMLText" style="margin-top:10px; margin-bottom:10px; width: 250px;">
     <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
   </span>
