suggesties in file opslaan

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ function addSuggestion(suggestion){
 
     <label for="suggestions">Suggestions box: </label>
     <input id="suggestions" class="txtaSiGMLText" style="margin-top:10px; margin-bottom:10px; width: 250px;">
-    <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
+   <!--  <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" /> -->
   </span>
 
   <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
