--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ function addSuggestion(suggestion){
   </div>
 </nav> -->
 <!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Sign Translation</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -367,7 +367,7 @@ function addSuggestion(suggestion){
 </nav>
 
 <!-- Masthead-->
-<header class="masthead">
+<!-- <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
             <h1 class="mx-auto my-0 text-uppercase">SignTranslation</h1>
@@ -376,7 +376,7 @@ function addSuggestion(suggestion){
         </div>
     </div>
 </header>
-
+ -->
 
 
 <!-- <div class="tab" align="center">
@@ -390,37 +390,37 @@ function addSuggestion(suggestion){
 <!-- <div id="Home" class="tabcontent landingpage" display="block" align="left" width="100%"> -->
 
 <!-- About -->
-<section class="projects-section bg-light" id="About">
+<section class="projects-section intro-section bg-light" id="About">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-            <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-02.jpg" alt="" /></div>
             <div class="col-lg-6">
                 <div class="bg-black text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-left">
+                        <div class="project-text w-100 my-auto text-center text-lg-right">
                             <h4 class="text-white">Challenge</h4>
                             <p class="mb-0 text-white-50">
                             In times of COVID-19, communication between health care providers and deaf patients is very difficult, because sign language interpreters are often not allowed to enter the hospital and mouth caps make lipreading impossible.
                             </p>
-                            <hr class="d-none d-lg-block mb-0 ml-0" />
+                            <hr class="d-none d-lg-block mb-0 mr-0" />
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-02.jpg" alt="" /></div>
         </div>
-        <!-- Contribution Row-->
+        <!-- Approach Row-->
         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div>
-            <div class="col-lg-6 order-lg-first">
+            <div class="col-lg-6">
                 <div class="bg-black text-center h-100 project">
                     <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-right">
-                            <h4 class="text-white">Contribution</h4>
+                        <div class="project-text w-100 my-auto text-center text-lg-left">
+                            <h4 class="text-white">Approach</h4>
                             <p class="mb-0 text-white-50">
                             We are developing an online tool that translates the most common questions and announcements in the diagnosis and treatment of COVID-19 from Dutch into Dutch Sign Language. Translations are displayed by means of videos and animated avatars.
                             </p>
-                            <hr class="d-none d-lg-block mb-0 mr-0" />
+                            <hr class="d-none d-lg-block mb-0 ml-0" />
                         </div>
                     </div>
                 </div>
@@ -432,7 +432,7 @@ function addSuggestion(suggestion){
 
 <!-- Translate -->
 
-<div id="Translate" class="tabcontent" align="center" width="100%">
+<section class="projects-section bg-light" id="Translate">
   <!-- CWA signing avatar panel 0 -->
   <!--================================================================-->
   <!-- <div class="CWASAPanel av0" align="center" ></div> -->
@@ -522,7 +522,7 @@ function addSuggestion(suggestion){
   <!--================================================================-->
   <div class="SToCA" align="center" ></div>
   <!--================================================================-->
-</div>
+</section>
 
 <!-- Team section -->
 <section class="projects-section bg-light" id="Team">
@@ -618,7 +618,7 @@ function addSuggestion(suggestion){
 <!-- Third party plugin JS-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <!-- Core theme JS-->
-<script src="static/grayscalescript.js"></script>
+<!-- <script src="static/grayscalescript.js"></script> -->
 
 </body>
 </html>
