--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ function addSuggestion(suggestion){
         <!--================================================================-->
 
         <span id="videos" class="undisplayed" align="left">
-          <iframe src="https://www.dropbox.com/s/bhm5glj5ih29med/AlledaagsDingen_03_Kanikuhelpen.mp4?raw=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+          <iframe width="320" height="240" src="https://www.dropbox.com/s/bhm5glj5ih29med/AlledaagsDingen_03_Kanikuhelpen.mp4?raw=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
         </span>
 
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
