--- a/index.html
+++ b/index.html
@@ -13,28 +13,32 @@
 <!-- Meta tag to make the website responsive to different types of devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="static/grayscalestyles.css" rel="stylesheet" />
+<!-- Icon -->
+<link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
 
-<!-- CSS files -->
-<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+<!-- Fonts for grayscale theme -->
+<script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+
+<!-- CSS file for bootstrap grayscale theme -->
+<link href="static/grayscalestyles.css" rel="stylesheet" />
+
+<!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <!-- <link rel="stylesheet" href="static/cwasa.css"> -->
 <link rel="stylesheet" href="static/cwasa-reduced.css">
 
 <!-- script for generating avatar animations -->
 <script type="text/javascript" src="cwa/allcsa.js"> </script>
 
-<!-- imports stylesheet for autocomplete -->
+<!-- CSS for autocomplete -->
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
 
-<!-- imports stylesheet for tooltip -->
+<!-- CSS for tooltip -->
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+<!-- CSS for question circle -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 <!-- imports necessary jquery-->
 <script type="text/javascript" src="../static/jquery-3.5.1.min.js"></script>
@@ -42,8 +46,6 @@
 <!-- imports jquery UI necessary for autocomplete and tooltip -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
-<!-- imports stylesheet for question circle -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 <script language="javascript">
 
