--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ function addSuggestion(suggestion){
                         <div class="project-text w-100 my-auto text-center text-lg-right">
                             <h4 class="text-white">Challenge</h4>
                             <p class="mb-0 text-white-50">
-                            In times of COVID-19, communication between health care providers and deaf patients is very difficult, because sign language interpreters are often not allowed to enter the hospital and mouth caps make lipreading impossible.
+                            In times of COVID-19, it is very difficult for healthcare professional to communicate with deaf patients. Sign language interpreters are often not allowed to enter the hospital and mouth caps make lipreading impossible.
                             </p>
                             <hr class="d-none d-lg-block mb-0 mr-0" />
                         </div>
@@ -373,9 +373,9 @@ function addSuggestion(suggestion){
                 <div class="bg-black text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text w-100 my-auto text-center text-lg-left">
-                            <h4 class="text-white">Approach</h4>
+                            <h4 class="text-white">Vision</h4>
                             <p class="mb-0 text-white-50">
-                            We are developing an online tool that translates the most common questions and announcements in the diagnosis and treatment of COVID-19 from Dutch into Dutch Sign Language. Translations are displayed by means of videos and animated avatars.
+                            This website translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
                             </p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
                         </div>
